--- a/src/theme/core.css
+++ b/src/theme/core.css
@@ -1,15 +1,13 @@
-.tab-pages {
+.pages {
     margin-top: 68px;
-    padding: 0 10px;
+    padding: 0 20px;
     overflow-y: scroll;
     height: 100%;
     padding-bottom: 80px;
 }
-.tab-page-title {
-    position: sticky;
-    top: 0;
-    z-index: 10;
-    background: white;
-    /* border-bottom-left-radius: 20px; */
-    /* border-bottom-right-radius: 20px; */
+.pages::-webkit-scrollbar {
+    display: none;
+}
+.select-option-filter ion-radio {
+    --color-checked: var(--ion-color-secondary) !important;
 }
